--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -30,6 +30,7 @@ mimalloc = { version = "*", default-features = false }
 [dependencies]
 cfg_block = "0.1.1"
 fallible-iterator = "0.3.0"
+hex = "0.4.3"
 libc = "0.2.155"
 log = "0.4.20"
 nix = { version = "0.29.0", features = ["fs"] }
