--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -53,6 +53,8 @@ pest = { version = "2.0", optional = true }
 pest_derive = { version = "2.0", optional = true }
 rand = "0.8.5"
 bumpalo = { version = "3.16.0", features = ["collections", "boxed"] }
+strum = { version = "0.26.3", features = ["derive"] }
+strum_macros = "0.26.3"
 
 [target.'cfg(not(target_family = "windows"))'.dev-dependencies]
 pprof = { version = "0.14.0", features = ["criterion", "flamegraph"] }
