Explain macro to handle metadata for descibing the vdbe instructions.
This includes p1, p2 and p3 mapped from a match table based on attribute
tags added to the enum variant fields.

A description attribute that is pulled from the enum variant and builds out
a const array for the .opcodes command that is generated from the descriptions.

--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,5 +1,22 @@
 [package]
-name = "macros"
+name = "limbo_macros"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
+description = "Macros for the Limbo database"
 
 [lib]
-proc-macro = true
+name = "limbo_macros"
+path = "lib.rs"
+
+[[test]]
+name = "tests"
+path = "tests/progress.rs"
+
+[dev-dependencies]
+trybuild = { version = "1.0.101", features = ["diff"]}
+
+[dependencies]
+limbo_macro_explain = { path = "explain" }
