Make wasm build script reproducible from any location

--- a/bindings/wasm/scripts/build
+++ b/bindings/wasm/scripts/build
@@ -1,4 +1,12 @@
 #!/bin/bash
 
+# Get the directory where the script is located
+SCRIPT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+PROJECT_ROOT="$( cd "$SCRIPT_DIR/../../.." && pwd )"
+
+# Navigate to the wasm directory
+cd "$PROJECT_ROOT/bindings/wasm" || exit 1
+
+# Run wasm-pack build
 wasm-pack build --no-pack --target nodejs
 cp package.json pkg/package.json
