--- a/bindings/java/Cargo.toml
+++ b/bindings/java/Cargo.toml
@@ -14,3 +14,5 @@ crate-type = ["cdylib"]
 anyhow = "1.0"
 limbo_core = { path = "../../core" }
 jni = "0.21.1"
+rand = { version = "0.8.5", features = [] }
+lazy_static = "1.5.0"
