Update native function lib path

--- a/bindings/java/Makefile
+++ b/bindings/java/Makefile
@@ -1,5 +1,5 @@
 java_run: lib
-	LD_LIBRARY_PATH=../../target/debug ./gradlew run
+	export LIMBO_SYSTEM_PATH=../../target/debug && ./gradlew run
 
 .PHONY: lib
 
