--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,11 +16,7 @@ path = "lib.rs"
 [features]
 default = ["fs", "json", "uuid", "io_uring"]
 fs = []
-json = [
-    "dep:jsonb",
-    "dep:pest",
-    "dep:pest_derive",
-]
+json = ["dep:serde_sqlite_jsonb", "dep:pest", "dep:pest_derive"]
 uuid = ["dep:uuid"]
 io_uring = ["dep:io-uring", "rustix/io_uring"]
 
@@ -46,10 +42,15 @@ sqlite3-parser = { path = "../vendored/sqlite3-parser" }
 thiserror = "1.0.61"
 getrandom = { version = "0.2.15", features = ["js"] }
 regex = "1.11.1"
-regex-syntax = { version = "0.8.5", default-features = false, features = ["unicode"] }
+regex-syntax = { version = "0.8.5", default-features = false, features = [
+    "unicode",
+] }
 chrono = "0.4.38"
 julian_day_converter = "0.3.2"
-jsonb = { version = "0.4.4", optional = true }
+# pull implementation directly into limbo?
+serde_sqlite_jsonb = { version = "0.1", features = [
+    "serde_json5",
+], default-features = false, optional = true }
 indexmap = { version = "2.2.6", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 pest = { version = "2.0", optional = true }
