--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -25,6 +25,7 @@
     "web/dist"
   ],
   "scripts": {
+    "build:ts": "tsc",
     "dev": "cd web && vite",
     "test": "cd web && vitest",
     "test:ui": "cd web && vitest --ui"
@@ -34,6 +35,7 @@
     "@vitest/ui": "^2.1.8",
     "happy-dom": "^16.3.0",
     "playwright": "^1.49.1",
+    "typescript": "^5.7.3",
     "vite": "^6.0.7",
     "vite-plugin-wasm": "^3.4.1",
     "vitest": "^2.1.8",
