--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "bindings/java",
     "bindings/javascript",
     "bindings/python",
+    "bindings/ruby",
     "bindings/rust",
     "bindings/wasm",
     "cli",
