--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -67,7 +67,7 @@ limbo_ipaddr = { workspace = true, optional = true, features = ["static"] }
 miette = "7.4.0"
 strum = "0.26"
 parking_lot = "0.12.3"
-tracing = { version = "0.1.41", default-features = false }
+tracing = { version = "0.1.41" }
 crossbeam-skiplist = "0.1.3"
 ryu = "1.0.19"
 
