--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -33,7 +33,7 @@ io-uring = { version = "0.6.1", optional = true }
 
 [target.'cfg(target_family = "unix")'.dependencies]
 polling = "3.7.2"
-rustix = "0.38.34"
+rustix = {version = "0.38.34", default-features = true, features = ["mm"]}
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 mimalloc = { version = "0.1", default-features = false }
