--- a/extensions/tests/Cargo.toml
+++ b/extensions/tests/Cargo.toml
@@ -17,6 +17,7 @@ env_logger = "0.11.6"
 lazy_static = "1.5.0"
 limbo_ext = { workspace = true, features = ["static"] }
 log = "0.4.26"
+tokio = { version = "1.44.1", features = ["rt", "time"]}
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 mimalloc = { version = "0.1", default-features = false }
